--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"concurrently": "^5.3.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"is-empty": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.10.9",
 		"passport": "^0.4.1",
+		"passport-google-oauth": "^2.0.0",
+		"passport-google-oauth20": "^2.0.0",
 		"passport-jwt": "^4.0.0",
+		"query-string": "^6.13.5",
+		"react-social-login-buttons": "^3.1.0",
 		"validator": "^13.1.17"
 	},
 	"devDependencies": {
