--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
 		"mongoose": "^5.10.9",
 		"passport": "^0.4.1",
 		"passport-facebook": "^3.0.0",
+		"passport-github": "^1.1.0",
 		"passport-google-oauth": "^2.0.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-jwt": "^4.0.0",
+		"passport-twitter": "^1.0.4",
 		"query-string": "^6.13.5",
 		"react-social-login-buttons": "^3.1.0",
 		"validator": "^13.1.17"
