--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"is-empty": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.10.9",
+		"node-cron": "^2.0.3",
 		"passport": "^0.4.1",
 		"passport-facebook": "^3.0.0",
 		"passport-github": "^1.1.0",
@@ -30,6 +31,7 @@
 		"passport-twitter": "^1.0.4",
 		"query-string": "^6.13.5",
 		"react-social-login-buttons": "^3.1.0",
+		"scrape-it": "^5.2.4",
 		"validator": "^13.1.17"
 	},
 	"devDependencies": {
