--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.1",
 		"mongoose": "^5.10.9",
+		"mongoose-paginate-v2": "^1.3.13",
 		"node-cron": "^2.0.3",
 		"passport": "^0.4.1",
 		"passport-facebook": "^3.0.0",
